cluster/apps/networking/istio-ingress/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "api.${SECRET_DOMAIN}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        credentialName: "${SECRET_DOMAIN/./-}-api-tls"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: default
